# MusicPlatform

./: .gitignore  Results.md  pyproject.toml
musicplatform/: manage.py
musicplatform/albums/: admin.py  apps.py  models.py  serializers.py  views.py
musicplatform/albums/migrations/: 0001_initial.py  0002_album_is_approved_alter_album_name.py  0003_alter_album_creation_datetime_alter_album_name.py  0004_alter_album_unique_together.py  0005_alter_album_name.py
musicplatform/artists/: admin.py  apps.py  models.py  serializers.py  views.py
musicplatform/artists/migrations/: 0001_initial.py
musicplatform/musicplatform/: asgi.py  settings.py  urls.py  wsgi.py
